--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -8,7 +8,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mysql-connector-python==8.0.30
-numpy==1.23.1
+numpy
 opencv-python==4.6.0.66
 pandas==1.4.3
 protobuf==3.20.1
