--- a/beta1/pubspec.yaml
+++ b/beta1/pubspec.yaml
@@ -58,7 +58,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/background1.jpeg
+    - assets/b2.jpeg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
