--- a/beta1/pubspec.yaml
+++ b/beta1/pubspec.yaml
@@ -63,8 +63,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/background1.jpeg
+    - assets/b1.jpeg
     - assets/b2.jpeg
+    - assets/wood.jpg
+    - assets/lightBG.jpg
+    
+    
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
